<resources>
    <string name="app_name">Qui?</string>
    <string name="title_activity_puntuacion">Puntuacion</string>
    <string name="Mala_puntuacion">Muy mal</string>
    <string name="Media_mala_puntuacion">Mal</string>
    <string name="Media_puntuacion">Regular</string>
    <string name="Media_buena_puntuacion">Bien</string>
    <string name="Buena_puntuacion">Increible</string>
    <string name="Comentario">Comentario sobre el evento</string>
    <string name="Enviar">Enviar</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="title_activity_aux">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="Puntuar">Puntuar</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="RepeatPassword">Repetir contraseña</string>
    <string name="queryHint">Buscar...</string>
    <string name="info">Info.</string>
    <string name="comments">Valoraciones</string>
    <string name="EXT_DATABASE">92.185.70.47</string>
    <string name="LOCAL_DATABASE">192.168.1.69</string>
    <string name="BASE_SERVICE_URL">http://einyel.duckdns.org/android/</string>
    <string name="EVENTS_SERVICE">http://einyel.duckdns.org/android/events</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="localizacion">LOCALIZACIÓN</string>
    <string name="localizar">LOCALIZAR</string>
    <string name="valoracionesVacias">Lo sentimos, aún no hay valoraciones para el evento :(</string>
    <string name="puntuacion_media_label">Puntuación media</string>
    <string name="error_camara">Error en la camara</string>
    <string name="escanea_codigo">Escanea el código QR del evento</string>
    <string name="check_in_correcto">Check in realizado correctamente</string>
    <string name="check_in_incorrecto">El código no corresponde al del evento</string>
    <string name="OK">OK</string>
    <string name="facebook_app_id">2100042006720618</string>
    <string name="facebook_login_protocol_scheme">fb2100042006720618</string>
    <string name="twitter_consumer_key">CyDaJZURKFyuUmtaZAmqQCtLo</string>
    <string name="twitter_consumer_secret">iRPcqzUVJBNLsoIyNFSMwP1cikIq4fCeij3zhmuXyyWLIRNHgS</string>
    <string name="Inicio_sesion">Inicio de sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Regístrate</string>
    <string name="registro">Registro</string>
    <string name="registrar">Registrar</string>
    <string name="askHavingAccount">¿No tienes cuenta?</string>
    <string name="logout">Cerrar sesión</string>
    <string name="profile">Perfil</string>
    <string name="events">Eventos</string>
    <string name="askAlreadyHaveAccount">¿Ya tienes una cuenta?</string>
    <string name="msgLogin">Inicia sesión</string>
    <string-array name="category_filters">
        <item>Ambiental</item>
        <item>Cultura</item>
        <item>Educación e investigación</item>
        <item>Social</item>
        <item>Todo</item>
    </string-array>
    <string name="EventCheckIn">Se ha realizado el check-in, ya puede valorar el evento.</string>
</resources>
