<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bulb_background"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="159dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="127dp"
        app:srcCompat="@drawable/edp_logo" />


    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_login"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/user_icon_left"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/verdana"
        android:foregroundGravity="center"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_login"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/lock_icon"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/verdana"
        android:foregroundGravity="center"
        android:hint="@string/Password"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        android:inputType="textPassword"/>

    <!--<com.facebook.login.widget.LoginButton
        xmlns:fb_icon="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="208dp"
        fb_icon:login_text=""
        fb_icon:logout_text=""
        fb_icon:background="@drawable/facebook_icon"
        android:background="@drawable/facebook_icon"
        />-->

    <!--<com.google.android.gms.common.SignInButton
        android:id="@+id/googleLogin"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="88dp" />-->

    <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twLogin"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="152dp"></com.twitter.sdk.android.core.identity.TwitterLoginButton>-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_above="@+id/socialLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/border_round_edit_text"
        android:fontFamily="@font/verdana"
        android:foregroundGravity="center"
        android:onClick="checkUser"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/socialLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/registro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="69dp"
        android:gravity="center">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twLogin"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:visibility="gone"></com.twitter.sdk.android.core.identity.TwitterLoginButton>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleLogin"
            android:layout_width="317dp"
            android:layout_height="48dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/fb"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/fb_icon"
            android:onClick="goFacebookLogin"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tw"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/twitter_icono"
            android:onClick="goTwitterLogin"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/google"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/google_icon"
            android:onClick="goGoogleLogin"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registro"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/verdana"
            android:gravity="center"
            android:text="@string/askHavingAccount"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/verdana"
            android:foregroundGravity="center"
            android:onClick="goSignUp"
            android:padding="0dp"
            android:text="@string/registrarse"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>